2002-02-18  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/wrap.lisp: require "linux" to avoid warnings

2002-02-13  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/linux.lisp (getdomainname, setdomainname)
	(gethostname, sethostname, mkstemp, realpath): uncommented and fixed
	* bindings/linuxlibc6/wrap.lisp: new file
	* bindings/linuxlibc6/Makefile, bindings/linuxlibc6/link.sh:
	added wrap.lisp

2002-02-12  Sam Steingold  <sds@gnu.org>

	* lisparit.d (init_arith): define DOUBLE-FLOAT-EPSILON and
	DOUBLE-FLOAT-NEGATIVE-EPSILON differently on linux-x86
	because of the 80-bit floating registers

2002-02-12  Sam Steingold  <sds@gnu.org>

	* package.d (%SET-PACKAGE-LOCK): call test_package_arg() on the
	single arg

2002-02-11  Sam Steingold  <sds@gnu.org>

	* stream.d (strip_white): strip only the CR, not all whitespace,
	since it breaks READ-LINE on terminals
	Reported by Peter Wood <peter.wood@worldonline.dk>

2002-02-11  Sam Steingold  <sds@gnu.org>

	ANSI CL 11.1.2.1.2 #9 forbids tracing in COMMON-LISP
	* trace.lisp (trace1, untrace1): forbid tracing in locked packages
	* init.lisp (check-redefinition): handle (SETF function-name)

2002-02-11  Sam Steingold  <sds@gnu.org>

	fixed the (compile nil (lambda () (flet (())))) bug
	* compiler.lisp (symbol-suffix): use just the suffix for NIL funname

2002-02-5  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp, affi1.lisp: moved *FOREIGN-ENCODING* to the
	CUSTOM package, as described in the impnotes

2002-02-09  Sam Steingold  <sds@gnu.org>

	* makemake.in: include impnotes.css in the distribution along
	with impnotes.html

2002-02-03  Sam Steingold  <sds@gnu.org>

	fixed a bug: (defmethod foo ((x (eql 1))) x)
	* package.d (CHECK-PACKAGE-LOCK): handle non-package third
	argument to mean "unlocked"
	* init.lisp (check-redefinition): (EQL X): when X is not a
	symbol, pass NIL as the package

2002-02-01  Sam Steingold  <sds@gnu.org>

	* spvw_update.d (update_weakpointer): new macro